# my-advent-of-code-solutions

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
source/: CMakeLists.txt  common.cpp  common.hpp  main.cpp  oldmain.cpp
source/Utility/: Array2D.hpp  ClassMap.hpp  Iterators.hpp  Log.hpp  MD5Hash.cpp  Math.hpp  TextHelpers.cpp  TextHelpers.hpp  Timer.cpp  Timer.hpp
source/Y2015/: C1_Stairs.cpp  C2_WrappingPaper.cpp  C3_HouseDelivery.cpp  C4_HashingBitcoin.cpp  C5_NiceStrings.cpp  C6_LightGrids.cpp  C7_BinaryCircuit.cpp
source/Y2016/: C1.cpp  C1_TraversingCity.cpp
source/Y2017/: C1.cpp  C1_InverseCaptcha.cpp
source/Y2018/: C1.cpp  C1_FrequencySums.cpp
source/Y2019/: C10_AsteroidStation.cpp  C11_HullPaintRobot.cpp  C12_MoonTrajectories.cpp  C13_ArcadeIntCode.cpp  C14_OreFormulas.cpp  C15_OxygenRobot.cpp  C16_PhaseCalculations.cpp  C17_ScaffoldMap.cpp  C18_MazeRunner.cpp  C18_MazeRunner2.cpp  C1_CalculateFuel.cpp  C2_GravityComputer.cpp  C3_WireIntersections.cpp  C4_PasswordCheck.cpp  C5_TestIntComputer.cpp  C6_PlanetOrbits.cpp  C7_IntThrusters.cpp  C8_ImageLayers.cpp  C9_IntSensors.cpp
source/Y2024/: C10.cpp  C11.cpp  C12.cpp  C13.cpp  C14.cpp  C15.cpp  C16.cpp  C17.cpp  C1_SortLocations.cpp  C2_SafeReports.cpp  C3_ParsingMul.cpp  C4_MatchXMAS.cpp  C5_PageDependencies.cpp  C6_GuardTracking.cpp  C7_Operators.cpp  C8_Antennas.cpp  C9_FileCompression.cpp
source/util_deprecated/: combinations.cpp  combinations.hpp  format.hpp  graph.cpp  graph.hpp  json.cpp  json.hpp  log.hpp  math_helpers.cpp  (+6 more)
(+13 files in other folders)
